--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "json-server --watch db.json --port 3000",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
