--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/check": "^0.7.0",
     "astro": "^4.8.6",
     "sweetalert": "^2.1.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "fastify": "^3.22.0",
+    "json-server": "^0.16.3"
   },
   "devDependencies": {
     "@types/node": "^22.1.0"
